UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/drl_sales_dates_info__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Vision_Data_Available_Till__c</fullName>
        <label>Data Available Till</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_Date__c</fullName>
        <label>GCP Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Update_Date__c</fullName>
        <label>Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DRL sales dates info</label>
</CustomObject>